k8s.rancher.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: rsmd
  labels:
    app: rsmd
spec:
  replicas: 1
  selector:
    matchLabels:
      application: rsmd
  template:
    metadata:
      labels:
        application: rsmd
    spec:
      containers:
      - command: [ "R", "-e", "shiny::runApp('inst/app.R', host = '0.0.0.0', port = 80)" ]
        image: fazenda/rsmd:1.3
        imagePullPolicy: Always
        name: rsmd
        ports:
        - containerPort: 80
          protocol: TCP
        securityContext:
          privileged: false
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rsmd
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    application: rsmd
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: rancher
  name: rsmd-ingress
  namespace: default
spec:
  rules:
  - host: rsmd.fazenda.solutions
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: rsmd
            port:
              number: 80
  tls:
  - hosts:
    - rsmd.fazenda.solutions
    secretName: rsmd-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: rancher
  name: rsmd-ingress-tls
  namespace: cattle-system
spec:
  rules:
  - host: rsmd.fazenda.solutions
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: rsmd
            port:
              number: 80
  tls:
  - hosts:
    - rsmd.fazenda.solutions
    secretName: rsmd-cert-tls
